update to v1.0.1